Revert "move vercel.json"
This reverts commit 81253d3e8f0bc5bea8d68912834527b947c9bdbd.

--- a/src/vercel.json
+++ b/src/vercel.json
@@ -1,11 +1,11 @@
 {
   "builds": [
     {
-      "src": "src/server.js",
+      "src": "server.js",
       "use": "@vercel/node",
       "config": {
         "includeFiles": [
-          "src/db.json"
+          "db.json"
         ]
       }
     }
@@ -13,7 +13,7 @@
   "rewrites": [
     {
       "source": "/(.*)",
-      "destination": "src/server.js"
+      "destination": "server.js"
     }
   ]
 }
