--- a/src/vercel.json
+++ b/src/vercel.json
@@ -1,15 +1,10 @@
 {
-  "builds": [
-    {
-      "src": "server.js",
-      "use": "@vercel/node",
-      "config": {
-        "includeFiles": [
-          "db.json"
-        ]
-      }
+  "functions": {
+    "server.js": {
+      "memory": 1024,
+      "includeFiles": "db.json"
     }
-  ],
+  },
   "rewrites": [
     {
       "source": "/(.*)",
