--- a/src/package.json
+++ b/src/package.json
@@ -1,9 +1,10 @@
 {
   "name": "src",
   "version": "1.0.0",
-  "main": "server.js",
+  "main": "api/server.js",
   "scripts": {
-    "start": "json-server -p 3000 --watch db.json --routes routes.json"
+    "start-local": "json-server -p 3000 --watch db.json --routes routes.json",
+    "start-node": "node api/server.js"
   },
   "private": true,
   "dependencies": {
